[tool.poetry]
name = "cipher_wn2188_b"
version = "0.1.1"
description = "second package for cipher"
authors = ["Hazel Ni"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
